--- a/app.html
+++ b/app.html
@@ -18,6 +18,12 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="icon" href="img/icon/favicon.ico">
 
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Permanent+Marker&family=Source+Sans+Pro:wght@400;700;900&display=swap" rel="stylesheet">
+
+    <!-- FONTAWESOME KIT -->
     <script src="https://kit.fontawesome.com/cea2e03a5f.js" crossorigin="anonymous"></script>
 </head>
 
@@ -52,8 +58,41 @@
         </div>
     </nav>
     <!-- ===== SECTION: MAIN ===== -->
-    <main class="flex-shrink-0">
-        <div class="container"></div>
+    <main class="flex-shrink-0 py-5 px-5">
+        <div class="container my-4 px-5">
+            <div class="row row-cols-1 row-cols-lg-2">
+                <div class="col-lg-4 col h-border">
+                    <h2>FizzBuzz: A Coding Project</h2>
+                    <h6>Intro</h6>
+                    <h3 class="mt-5 h3-border-bottom py-2">Instruction</h3>
+                    <p>Hit the Run button to display the numbers.</p>
+                </div>
+                <div class="col-lg-8 col">
+                    <div>
+                        <h5>Enter Values</h5>
+                        <form action="#" class="row gy-3 gx-3">
+                            <div class="col">
+                                <input type="number" id="inputNumber1" class="form-control" value="3" aria-label="First Number" placeholder="First Number">
+                            </div>
+                            <div class="col">
+                                <input type="number" id="inputNumber2" class="form-control" value="5" aria-label="Second Number" placeholder="Second Number">
+                            </div>
+                            <div class="col-12 d-flex justify-content-end">
+                                <button type="button" id="btnSubmit" class="btn btn-lg" >Run</button>
+                            </div>
+                        </form>
+                        <h3 class="h3-border-bottom">Result</h3>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-sm table-row-5">
+                                <tbody id="results">
+                                    <!-- Results Go Here -->
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- ===== SECTION: FOOTER ===== -->
     <footer class="footer mt-auto py-2 sticky-footer">
@@ -75,6 +114,16 @@
             </div>
         </div>
     </footer>
+
+    <template id="fbTemplate">
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </template>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
