--- a/code.html
+++ b/code.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Zsolt Dzsugan</title>
+    <title>FizzBuzz: A Coding Project By Zsolt Dzsugan</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -21,6 +21,12 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="icon" href="img/icon/favicon.ico">
 
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Permanent+Marker&family=Source+Sans+Pro:wght@400;700;900&display=swap" rel="stylesheet">
+
+    <!-- FONTAWESOME KIT -->
     <script src="https://kit.fontawesome.com/cea2e03a5f.js" crossorigin="anonymous"></script>
 </head>
 
@@ -28,7 +34,7 @@
     <!-- ===== SECTION: NAV ===== -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/icon/favicon-32x32.png" height="50px" alt="Zsolt Dzsugan logo"><span>APP Name</span></a>
+            <a class="navbar-brand" href="#"><img src="img/icon/favicon-32x32.png" height="50px" alt="Zsolt Dzsugan logo"><span>FizzBuzz</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
